common/force-app/main/default/objects/Application__c/fields/Accountant__c.field-meta.xml
<CustomField>
    <fullName>Accountant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Please create the accountant as a Person Account Seperatly to adding them here if you are needing to send them this docusign. Note Email and name is required on accountant creation.</inlineHelpText>
    <label>Accountant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Applications (Accountant)</relationshipLabel>
    <relationshipName>Applications3</relationshipName>
    <type>Lookup</type>
</CustomField>