common/force-app/main/default/objects/Application__c/fields/Accountant_Address__c.field-meta.xml
<CustomField>
    <fullName>Accountant_Address__c</fullName>
    <formula>Accountant__r.MailingStreet &amp; &quot;, &quot; &amp; Accountant__r.MailingCity &amp; &quot;, &quot; &amp; Accountant__r.MailingState &amp; &quot;, &quot; &amp; Accountant__r.MailingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accountant Address</label>
    <type>Text</type>
</CustomField>