common/force-app/main/default/objects/Application__c/fields/Accountant_Name__c.field-meta.xml
<CustomField>
    <fullName>Accountant_Name__c</fullName>
    <formula>Accountant__r.FirstName  &amp; &quot; &quot; &amp;  Accountant__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accountant Name</label>
    <type>Text</type>
</CustomField>