common/force-app/main/default/objects/Application__c/fields/Accountant_professional_body__c.field-meta.xml
<CustomField>
    <fullName>Accountant_professional_body__c</fullName>
    <inlineHelpText>Accountant&apos;s professional member organisation.</inlineHelpText>
    <label>Accountant’s professional body</label>
    <type>TextArea</type>
</CustomField>