common/force-app/main/default/objects/Application__c/fields/Accountant_registration_number__c.field-meta.xml
<CustomField>
    <fullName>Accountant_registration_number__c</fullName>
    <label>Accountant’s registration number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>