common/force-app/main/default/objects/Application__c/fields/Accountant_s_Business_Name__c.field-meta.xml
<CustomField>
    <fullName>Accountant_s_Business_Name__c</fullName>
    <formula>Accountant__r.Account.Accountant_Company__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accountant’s Business Name</label>
    <type>Text</type>
</CustomField>