common/force-app/main/default/objects/Application__c/fields/AIPA_MIPA_or_FIPA__c.field-meta.xml
<CustomField>
    <fullName>AIPA_MIPA_or_FIPA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>“AIPA”, “MIPA” or “FIPA”</label>
    <type>Checkbox</type>
</CustomField>