common/force-app/main/default/objects/Application__c/fields/Authorised_Representative_Email__c.field-meta.xml
<CustomField>
    <fullName>Authorised_Representative_Email__c</fullName>
    <label>Authorised Representative Email</label>
    <length>100</length>
    <type>Text</type>
</CustomField>