common/force-app/main/default/objects/Application__c/fields/Authorised_Representative_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Authorised_Representative_Mobile__c</fullName>
    <label>Authorised Representative Mobile</label>
    <length>20</length>
    <type>Text</type>
</CustomField>