common/force-app/main/default/objects/Application__c/fields/Build_Price__c.field-meta.xml
<CustomField>
    <fullName>Build_Price__c</fullName>
    <label>Build Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>