common/force-app/main/default/objects/Application__c/fields/Business_Account__c.field-meta.xml
<CustomField>
    <fullName>Business_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Referral Partner must ALWAYS be filled in so that the docusign can be sent to someone. Fill this field if you want to docusign to reference the company name instead of the referral partner and choose the correct Docusign Document.</inlineHelpText>
    <label>Business Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Applications (Business Account)</relationshipLabel>
    <relationshipName>ApplicationscuLs</relationshipName>
    <type>Lookup</type>
</CustomField>