common/force-app/main/default/objects/Application__c/fields/Buyer1_Contact__c.field-meta.xml
<CustomField>
    <fullName>Buyer1_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Buyer1</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>