common/force-app/main/default/objects/Application__c/fields/Buyer1_Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>Buyer1_Middle_Name__c</fullName>
    <label>Buyer1 Middle Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>