common/force-app/main/default/objects/Application__c/fields/Buyer2_Contact__c.field-meta.xml
<CustomField>
    <fullName>Buyer2_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Buyer2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Applications (Buyer2)</relationshipLabel>
    <relationshipName>Applications1</relationshipName>
    <type>Lookup</type>
</CustomField>