common/force-app/main/default/objects/Application__c/fields/Buyer_1_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Buyer_1_First_Name__c</fullName>
    <label>Buyer 1 First Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>