common/force-app/main/default/objects/Application__c/fields/Buyer_1_Phone__c.field-meta.xml
<CustomField>
    <fullName>Buyer_1_Phone__c</fullName>
    <label>Buyer 1 Phone</label>
    <type>Phone</type>
</CustomField>