common/force-app/main/default/objects/Application__c/fields/Buyer_1_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Buyer_1_Postal_Code__c</fullName>
    <label>Buyer 1 Postal Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>