common/force-app/main/default/objects/Application__c/fields/Buyer_1_Postal_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Buyer_1_Postal_Street_Address__c</fullName>
    <label>Buyer 1 Postal Street Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>