common/force-app/main/default/objects/Application__c/fields/Buyer_2_Email__c.field-meta.xml
<CustomField>
    <fullName>Buyer_2_Email__c</fullName>
    <label>Buyer 2 Email</label>
    <type>Email</type>
</CustomField>