common/force-app/main/default/objects/Application__c/fields/Buyer_2_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Buyer_2_First_Name__c</fullName>
    <label>Buyer 2 First Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>