common/force-app/main/default/objects/Application__c/fields/Buyer_2_Phone__c.field-meta.xml
<CustomField>
    <fullName>Buyer_2_Phone__c</fullName>
    <label>Buyer 2 Phone</label>
    <type>Phone</type>
</CustomField>