common/force-app/main/default/objects/Application__c/fields/Buyer_2_Postal_City__c.field-meta.xml
<CustomField>
    <fullName>Buyer_2_Postal_City__c</fullName>
    <label>Buyer 2 Postal City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>