common/force-app/main/default/objects/Application__c/fields/Buyer_2_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Buyer_2_Postal_Code__c</fullName>
    <label>Buyer 2 Postal Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>