common/force-app/main/default/objects/Application__c/fields/Buyer_2_Postal_State__c.field-meta.xml
<CustomField>
    <fullName>Buyer_2_Postal_State__c</fullName>
    <label>Buyer 2 Postal State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>State_Province</valueSetName>
    </valueSet>
</CustomField>