common/force-app/main/default/objects/Application__c/fields/Buyer_2_Postal_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Buyer_2_Postal_Street_Address__c</fullName>
    <label>Buyer 2 Postal Street Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>