common/force-app/main/default/objects/Application__c/fields/Buyer_s_Finance_Broker_Firm__c.field-meta.xml
<CustomField>
    <fullName>Buyer_s_Finance_Broker_Firm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Buyer&apos;s Finance Broker Firm</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Applications (Buyer&apos;s Finance Broker)</relationshipLabel>
    <relationshipName>Applications2</relationshipName>
    <type>Lookup</type>
</CustomField>