common/force-app/main/default/objects/Application__c/fields/Buyer_s_Solicitor__c.field-meta.xml
<CustomField>
    <fullName>Buyer_s_Solicitor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Buyer&apos;s Solicitor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Applications (Buyer&apos;s Solicitor)</relationshipLabel>
    <relationshipName>Applications1</relationshipName>
    <type>Lookup</type>
</CustomField>