common/force-app/main/default/objects/Application__c/fields/Buyer_s_Solicitor_lp__c.field-meta.xml
<CustomField>
    <fullName>Buyer_s_Solicitor_lp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Buyer&apos;s Solicitor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Applications (Buyer&apos;s Solicitor Firm)</relationshipLabel>
    <relationshipName>Applications2</relationshipName>
    <type>Lookup</type>
</CustomField>