common/force-app/main/default/objects/Application__c/fields/Buyers_Solicitor_Law_Firm_Name__c.field-meta.xml
<CustomField>
    <fullName>Buyers_Solicitor_Law_Firm_Name__c</fullName>
    <label>Buyers Solicitor Law Firm Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>