common/force-app/main/default/objects/Application__c/fields/CA_ACA_or_FCA__c.field-meta.xml
<CustomField>
    <fullName>CA_ACA_or_FCA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>“CA”, “ACA” or “FCA”</label>
    <type>Checkbox</type>
</CustomField>