common/force-app/main/default/objects/Application__c/fields/Capital_Manager__c.field-meta.xml
<CustomField>
    <fullName>Capital_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Capital Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Applications (Capital Manager)</relationshipLabel>
    <relationshipName>Applications5</relationshipName>
    <type>Lookup</type>
</CustomField>