common/force-app/main/default/objects/Application__c/fields/Capital_Manager_User__c.field-meta.xml
<CustomField>
    <fullName>Capital_Manager_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Capital Manager (User)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Applications1</relationshipName>
    <type>Lookup</type>
</CustomField>