common/force-app/main/default/objects/Application__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Applications (Contact)</relationshipLabel>
    <relationshipName>Applications4</relationshipName>
    <type>Lookup</type>
</CustomField>