common/force-app/main/default/objects/Application__c/fields/Contact_Address__c.field-meta.xml
<CustomField>
    <fullName>Contact_Address__c</fullName>
    <formula>Contact__r.MailingStreet &amp; &quot;, &quot; &amp;  Contact__r.MailingCity &amp; &quot;, &quot; &amp; Contact__r.MailingState &amp; &quot;, &quot; &amp;  Contact__r.MailingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Address</label>
    <type>Text</type>
</CustomField>