common/force-app/main/default/objects/Application__c/fields/Controller__c.field-meta.xml
<CustomField>
    <fullName>Controller__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Under the Corporations Act 2001 (Cth) (the Act), an entity (the Controller) controls a second entity (the Investor) the entity has the capacity to determine the outcome of decisions about the second entity’s financial and operating policies.</inlineHelpText>
    <label>Controller</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Applications (Controller)</relationshipLabel>
    <relationshipName>Applications7</relationshipName>
    <type>Lookup</type>
</CustomField>