common/force-app/main/default/objects/Application__c/fields/CPA_or_FCPA__c.field-meta.xml
<CustomField>
    <fullName>CPA_or_FCPA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>“CPA” or “FCPA”</label>
    <type>Checkbox</type>
</CustomField>