common/force-app/main/default/objects/Application__c/fields/Date_of_certification__c.field-meta.xml
<CustomField>
    <fullName>Date_of_certification__c</fullName>
    <label>Date of certification</label>
    <type>Date</type>
</CustomField>