common/force-app/main/default/objects/Application__c/fields/Date_Validated__c.field-meta.xml
<CustomField>
    <fullName>Date_Validated__c</fullName>
    <label>Date Validated/Approved</label>
    <type>Date</type>
</CustomField>