common/force-app/main/default/objects/Application__c/fields/Deposit_Holder__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Holder__c</fullName>
    <label>Deposit Holder</label>
    <length>100</length>
    <type>Text</type>
</CustomField>