common/force-app/main/default/objects/Application__c/fields/Deposit_Holder_Account_No__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Holder_Account_No__c</fullName>
    <label>Deposit Holder Account No</label>
    <length>20</length>
    <type>Text</type>
</CustomField>