common/force-app/main/default/objects/Application__c/fields/Deposit_Holder_BSB__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Holder_BSB__c</fullName>
    <label>Deposit Holder BSB</label>
    <length>20</length>
    <type>Text</type>
</CustomField>