common/force-app/main/default/objects/Application__c/fields/Deposit_holder_Vendors_Law_firm__c.field-meta.xml
<CustomField>
    <fullName>Deposit_holder_Vendors_Law_firm__c</fullName>
    <label>Deposit holder (Vendors Law firm)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>