common/force-app/main/default/objects/Application__c/fields/Deposit_Transaction_Ref__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Transaction_Ref__c</fullName>
    <label>Deposit Transaction Ref</label>
    <length>100</length>
    <type>Text</type>
</CustomField>