common/force-app/main/default/objects/Application__c/fields/Development_Name__c.field-meta.xml
<CustomField>
    <fullName>Development_Name__c</fullName>
    <formula>Product__r.Development_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Development Name</label>
    <type>Text</type>
</CustomField>