common/force-app/main/default/objects/Application__c/fields/Finance_Broker_Email__c.field-meta.xml
<CustomField>
    <fullName>Finance_Broker_Email__c</fullName>
    <label>Finance Broker Email</label>
    <length>80</length>
    <type>Text</type>
</CustomField>