common/force-app/main/default/objects/Application__c/fields/Finance_Broker_Firm_Name__c.field-meta.xml
<CustomField>
    <fullName>Finance_Broker_Firm_Name__c</fullName>
    <label>Finance Broker Firm Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>