common/force-app/main/default/objects/Application__c/fields/Finance_Broker_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Finance_Broker_Last_Name__c</fullName>
    <label>Finance Broker Last Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>