common/force-app/main/default/objects/Application__c/fields/Finance_Broker_Phone__c.field-meta.xml
<CustomField>
    <fullName>Finance_Broker_Phone__c</fullName>
    <label>Finance Broker Phone</label>
    <type>Phone</type>
</CustomField>