common/force-app/main/default/objects/Application__c/fields/Finance_Broker_Postal_City__c.field-meta.xml
<CustomField>
    <fullName>Finance_Broker_Postal_City__c</fullName>
    <label>Finance Broker Postal City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>