common/force-app/main/default/objects/Application__c/fields/Finance_Broker_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Finance_Broker_Postal_Code__c</fullName>
    <label>Finance Broker Postal Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>