common/force-app/main/default/objects/Application__c/fields/Finance_Broker_Postal_State__c.field-meta.xml
<CustomField>
    <fullName>Finance_Broker_Postal_State__c</fullName>
    <label>Finance Broker Postal State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>State_Province</valueSetName>
    </valueSet>
</CustomField>