common/force-app/main/default/objects/Application__c/fields/Finance_Broker_Postal_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Finance_Broker_Postal_Street_Address__c</fullName>
    <label>Finance Broker Postal Street Address</label>
    <length>250</length>
    <type>Text</type>
</CustomField>