common/force-app/main/default/objects/Application__c/fields/Finance_terms__c.field-meta.xml
<CustomField>
    <fullName>Finance_terms__c</fullName>
    <label>Finance terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A for off the plan purchases</fullName>
            </value>
            <value>
                <fullName>14 days</fullName>
            </value>
            <value>
                <fullName>21 days</fullName>
            </value>
            <value>
                <fullName>28 days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>