common/force-app/main/default/objects/Application__c/fields/Financial_Planner__c.field-meta.xml
<CustomField>
    <fullName>Financial_Planner__c</fullName>
    <label>Authorised Representative</label>
    <length>30</length>
    <type>Text</type>
</CustomField>