common/force-app/main/default/objects/Application__c/fields/Financial_Planner_Business_Name__c.field-meta.xml
<CustomField>
    <fullName>Financial_Planner_Business_Name__c</fullName>
    <label>Authorised Representative Business Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>