common/force-app/main/default/objects/Application__c/fields/First_Investment_commission__c.field-meta.xml
<CustomField>
    <fullName>First_Investment_commission__c</fullName>
    <defaultValue>1.10</defaultValue>
    <inlineHelpText>Please enter the % including GST.</inlineHelpText>
    <label>First Investment Commission</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>