common/force-app/main/default/objects/Application__c/fields/Include_These_Entities__c.field-meta.xml
<CustomField>
    <fullName>Include_These_Entities__c</fullName>
    <label>Include These Entities</label>
    <type>TextArea</type>
</CustomField>