common/force-app/main/default/objects/Application__c/fields/Investment_ID__c.field-meta.xml
<CustomField>
    <fullName>Investment_ID__c</fullName>
    <formula>Opportunity__r.Invested_Product_ADMIN_FIELD__r.ProductCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deposit Transaction Ref/Investment ID</label>
    <type>Text</type>
</CustomField>