common/force-app/main/default/objects/Application__c/fields/Investor_1__c.field-meta.xml
<CustomField>
    <fullName>Investor_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Investor must provide a signed written acknowledgment to the Fund Manager acknowledging the Controller has the capacity to determine the outcome of decisions about the Investor’s financial and operating policies.</inlineHelpText>
    <label>Investor 1</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Applications (Investor 1)</relationshipLabel>
    <relationshipName>Applications8</relationshipName>
    <type>Lookup</type>
</CustomField>