common/force-app/main/default/objects/Application__c/fields/Investor_1_Account__c.field-meta.xml
<CustomField>
    <fullName>Investor_1_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Investor 1 Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Applications (Investor 1 Account)</relationshipLabel>
    <relationshipName>Applications9</relationshipName>
    <type>Lookup</type>
</CustomField>