common/force-app/main/default/objects/Application__c/fields/Investor_2_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Investor_2_Expiry_Date__c</fullName>
    <formula>ADDMONTHS( New_Investor_2__r.Date_of_first_Investment__c, 12)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Investor 2 Expiry Date</label>
    <type>Date</type>
</CustomField>