common/force-app/main/default/objects/Application__c/fields/Investor_Address__c.field-meta.xml
<CustomField>
    <fullName>Investor_Address__c</fullName>
    <formula>Account__r.PersonContact.MailingStreet   &amp; &quot;, &quot; &amp; Account__r.PersonContact.MailingCity  &amp; &quot;, &quot; &amp; Account__r.PersonContact.MailingState  &amp; &quot;, &quot; &amp; Account__r.PersonContact.MailingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Investor Address</label>
    <type>Text</type>
</CustomField>