common/force-app/main/default/objects/Application__c/fields/Investor_DOB__c.field-meta.xml
<CustomField>
    <fullName>Investor_DOB__c</fullName>
    <formula>Account__r.PersonContact.Birthdate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Investor DOB</label>
    <type>Date</type>
</CustomField>