common/force-app/main/default/objects/Application__c/fields/Investor_Email__c.field-meta.xml
<CustomField>
    <fullName>Investor_Email__c</fullName>
    <formula>Account__r.PA_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Investor Email</label>
    <type>Text</type>
</CustomField>