common/force-app/main/default/objects/Application__c/fields/Investor_Phone__c.field-meta.xml
<CustomField>
    <fullName>Investor_Phone__c</fullName>
    <formula>Account__r.PersonContact.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Investor Phone</label>
    <type>Text</type>
</CustomField>