common/force-app/main/default/objects/Application__c/fields/Land_Price__c.field-meta.xml
<CustomField>
    <fullName>Land_Price__c</fullName>
    <label>Land Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>