common/force-app/main/default/objects/Application__c/fields/Land_Size_in_Sqm__c.field-meta.xml
<CustomField>
    <fullName>Land_Size_in_Sqm__c</fullName>
    <label>Land Size in Sqm</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>