common/force-app/main/default/objects/Application__c/fields/Membership_Validated__c.field-meta.xml
<CustomField>
    <fullName>Membership_Validated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Membership Validated</label>
    <type>Checkbox</type>
</CustomField>