common/force-app/main/default/objects/Application__c/fields/Membership_Validated_By__c.field-meta.xml
<CustomField>
    <fullName>Membership_Validated_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Membership Validated By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>