common/force-app/main/default/objects/Application__c/fields/New_Investor_2__c.field-meta.xml
<CustomField>
    <fullName>New_Investor_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>For the purposes of this agreement, New Investor means an investor that was not a registered member of VentureCrowd at the time the referral was made.</inlineHelpText>
    <label>New Investor 2</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Applications (New Investor 2)</relationshipLabel>
    <relationshipName>Applications4</relationshipName>
    <type>Lookup</type>
</CustomField>