common/force-app/main/default/objects/Application__c/fields/Not_Currently_Referring__c.field-meta.xml
<CustomField>
    <fullName>Not_Currently_Referring__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not Currently Referring</label>
    <type>Checkbox</type>
</CustomField>