common/force-app/main/default/objects/Application__c/fields/Offer_Purchase_Price__c.field-meta.xml
<CustomField>
    <fullName>Offer_Purchase_Price__c</fullName>
    <label>Offer Purchase Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>