common/force-app/main/default/objects/Application__c/fields/Other_eligible_foreign_professional_body__c.field-meta.xml
<CustomField>
    <fullName>Other_eligible_foreign_professional_body__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Other eligible foreign professional body</label>
    <type>Checkbox</type>
</CustomField>