common/force-app/main/default/objects/Application__c/fields/Property_Lot_Unit_No__c.field-meta.xml
<CustomField>
    <fullName>Property_Lot_Unit_No__c</fullName>
    <label>Property Lot/Unit No.</label>
    <length>100</length>
    <type>Text</type>
</CustomField>