common/force-app/main/default/objects/Application__c/fields/Property_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Property_Street_Address__c</fullName>
    <label>Property Street Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>