common/force-app/main/default/objects/Application__c/fields/Referral_Partner__c.field-meta.xml
<CustomField>
    <fullName>Referral_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referral Partner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Applications (Referrer)</relationshipLabel>
    <relationshipName>Applications6</relationshipName>
    <type>Lookup</type>
</CustomField>