common/force-app/main/default/objects/Application__c/fields/Relationship_to_you__c.field-meta.xml
<CustomField>
    <fullName>Relationship_to_you__c</fullName>
    <label>Relationship to you</label>
    <type>TextArea</type>
</CustomField>