common/force-app/main/default/objects/Application__c/fields/Sales_approval_recommendation__c.field-meta.xml
<CustomField>
    <fullName>Sales_approval_recommendation__c</fullName>
    <label>Sales Approval Recommendation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>