common/force-app/main/default/objects/Application__c/fields/Settlement_terms__c.field-meta.xml
<CustomField>
    <fullName>Settlement_terms__c</fullName>
    <label>Settlement terms</label>
    <type>TextArea</type>
</CustomField>