common/force-app/main/default/objects/Application__c/fields/Solicitor_Email__c.field-meta.xml
<CustomField>
    <fullName>Solicitor_Email__c</fullName>
    <label>Solicitor Email</label>
    <length>80</length>
    <type>Text</type>
</CustomField>