common/force-app/main/default/objects/Application__c/fields/Solicitor_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Solicitor_First_Name__c</fullName>
    <label>Solicitor First Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>