common/force-app/main/default/objects/Application__c/fields/Solicitor_Phone__c.field-meta.xml
<CustomField>
    <fullName>Solicitor_Phone__c</fullName>
    <label>Solicitor Phone</label>
    <type>Phone</type>
</CustomField>