common/force-app/main/default/objects/Application__c/fields/Solicitor_Postal_City__c.field-meta.xml
<CustomField>
    <fullName>Solicitor_Postal_City__c</fullName>
    <label>Solicitor Postal City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>